crates/wdl-analysis/tests/validation/wdl-1-4-symbolic-import-with-flag/source.errors
error: symbolic import resolution is enabled, but no module governs this document
  ┌─ tests/validation/wdl-1-4-symbolic-import-with-flag/source.wdl:3:8
  │
3 │ import openwdl/csvkit
  │        ^^^^^^^^^^^^^^

error: symbolic import resolution is enabled, but no module governs this document
  ┌─ tests/validation/wdl-1-4-symbolic-import-with-flag/source.wdl:4:15
  │
4 │ import * from openwdl/csvkit
  │               ^^^^^^^^^^^^^^

error: symbolic import resolution is enabled, but no module governs this document
  ┌─ tests/validation/wdl-1-4-symbolic-import-with-flag/source.wdl:5:22
  │
5 │ import { sort } from openwdl/csvkit
  │                      ^^^^^^^^^^^^^^

