crates/wdl-analysis/tests/validation/wdl-1-4-symbolic-import-with-flag/source.wdl
version 1.4

import openwdl/csvkit
import * from openwdl/csvkit
import { sort } from openwdl/csvkit

task example {
    command <<<>>>
}
